still have CRUD issue wip